# business-card

./: .gitignore  Dockerfile-L1  Dockerfile-L2  README.md  docker-compose.yml  pyproject.toml  tailwind.config.js
_assets/: favicon.afdesign  logo.afdesign
app/: __init__.py  business_info.py  favicons.py
app/static/: main.css
app/templates/: index.html
requirements/: development.txt  production.txt
tailwindcss/: __init__.css  structure.css  theme.css
